airflow-docker/airflow-data/logs/postgres_dag/create_employee_table/2022-09-13T14:33:58.837029+00:00/2.log
[2022-09-13 14:35:03,777] {taskinstance.py:826} INFO - Dependencies all met for <TaskInstance: postgres_dag.create_employee_table 2022-09-13T14:33:58.837029+00:00 [queued]>
[2022-09-13 14:35:03,818] {taskinstance.py:826} INFO - Dependencies all met for <TaskInstance: postgres_dag.create_employee_table 2022-09-13T14:33:58.837029+00:00 [queued]>
[2022-09-13 14:35:03,820] {taskinstance.py:1017} INFO - 
--------------------------------------------------------------------------------
[2022-09-13 14:35:03,821] {taskinstance.py:1018} INFO - Starting attempt 2 of 3
[2022-09-13 14:35:03,822] {taskinstance.py:1019} INFO - 
--------------------------------------------------------------------------------
[2022-09-13 14:35:03,856] {taskinstance.py:1038} INFO - Executing <Task(PostgresOperator): create_employee_table> on 2022-09-13T14:33:58.837029+00:00
[2022-09-13 14:35:03,861] {standard_task_runner.py:51} INFO - Started process 30606 to run task
[2022-09-13 14:35:03,870] {standard_task_runner.py:75} INFO - Running: ['airflow', 'tasks', 'run', 'postgres_dag', 'create_employee_table', '2022-09-13T14:33:58.837029+00:00', '--job-id', '70', '--pool', 'default_pool', '--raw', '--subdir', 'DAGS_FOLDER/dag_with_postgres.py', '--cfg-path', '/tmp/tmpes1bthu4']
[2022-09-13 14:35:03,877] {standard_task_runner.py:76} INFO - Job 70: Subtask create_employee_table
[2022-09-13 14:35:03,969] {logging_mixin.py:103} INFO - Running <TaskInstance: postgres_dag.create_employee_table 2022-09-13T14:33:58.837029+00:00 [running]> on host 27377494ab8b
[2022-09-13 14:35:04,046] {taskinstance.py:1232} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=Dave
AIRFLOW_CTX_DAG_ID=postgres_dag
AIRFLOW_CTX_TASK_ID=create_employee_table
AIRFLOW_CTX_EXECUTION_DATE=2022-09-13T14:33:58.837029+00:00
AIRFLOW_CTX_DAG_RUN_ID=manual__2022-09-13T14:33:58.837029+00:00
[2022-09-13 14:35:04,049] {postgres.py:69} INFO - Executing: 
            create table if not exists employee(
                emp_id varchar,
                first_name varchar,
                last_name varchar,
                designation varchar
                primary key (emp_id)
            )
        
[2022-09-13 14:35:04,082] {base.py:74} INFO - Using connection to: id: local_postgres. Host: host.docker.internal, Port: 5432, Schema: student, Login: postgres, Password: XXXXXXXX, extra: None
[2022-09-13 14:35:04,116] {dbapi.py:180} INFO - Running statement: 
            create table if not exists employee(
                emp_id varchar,
                first_name varchar,
                last_name varchar,
                designation varchar
                primary key (emp_id)
            )
        , parameters: None
[2022-09-13 14:35:04,122] {taskinstance.py:1396} ERROR - syntax error at or near "("
LINE 7:                 primary key (emp_id)
                                    ^
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.6/site-packages/airflow/models/taskinstance.py", line 1086, in _run_raw_task
    self._prepare_and_execute_task_with_callbacks(context, task)
  File "/home/airflow/.local/lib/python3.6/site-packages/airflow/models/taskinstance.py", line 1260, in _prepare_and_execute_task_with_callbacks
    result = self._execute_task(context, task_copy)
  File "/home/airflow/.local/lib/python3.6/site-packages/airflow/models/taskinstance.py", line 1300, in _execute_task
    result = task_copy.execute(context=context)
  File "/home/airflow/.local/lib/python3.6/site-packages/airflow/providers/postgres/operators/postgres.py", line 71, in execute
    self.hook.run(self.sql, self.autocommit, parameters=self.parameters)
  File "/home/airflow/.local/lib/python3.6/site-packages/airflow/hooks/dbapi.py", line 184, in run
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "("
LINE 7:                 primary key (emp_id)
                                    ^

[2022-09-13 14:35:04,131] {taskinstance.py:1440} INFO - Marking task as UP_FOR_RETRY. dag_id=postgres_dag, task_id=create_employee_table, execution_date=20220913T143358, start_date=20220913T143503, end_date=20220913T143504
[2022-09-13 14:35:04,202] {local_task_job.py:118} INFO - Task exited with return code 1
